# rating-bridge

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/foxglove-demo/: exposure_report.json  exposure_report.md  exposure_report.sig.json
src/rating_bridge/: __init__.py  __main__.py  canonical.py  cli.py  incidents.py  mcap_io.py  metrics.py  motion_detect.py  report.py  signing.py
tests/: conftest.py  test_metrics_hardening.py  test_smoke.py
